# django-xgallery

./: .gitignore  LICENSE  MANIFEST.in  README.md  admin.py  galleryAPI.py  gallery_constants.py  manage.py  models.py  pyproject.toml  pytest.ini  requirements.txt  sitemap.py  urls.py  views.py  xmlrpc.py
.github/workflows/: pypi-publish.yml  test.yml
migrations/: 0002_remove_album_owner_gallery_blog_galleryitem_caption_and_more.py  0003_galleryitem_description_alter_galleryitem_caption.py
templates/: add_item.html  album.html  fetch_albums.html  fullscreen.html  gallery_base.html  overview.html  simple_viewer.html
templatetags/: thumbnail.py  utils.py
tests/: test_urls.py  test_views.py  test_wp_api.py  utils.py
tests/conf/: settings.py  urls.py
thumbnail/: field.py  utils.py
views/: default.py
xgallery/: apps.py  galleryAPI.py  models.py  urls.py
xgallery/migrations/: 0001_initial.py  0002_remove_album_owner_gallery_blog_galleryitem_caption_and_more.py  0004_galleryitem_posts.py  0005_alter_album_id_alter_album_pub_date_and_more.py
xgallery/templates/: album.html  album_cooliris.html  album_photocast.html  album_properties.html  gallery_base.html  new_album.html  overview.html
xgallery/tests/: test_models.py  test_views.py
xgallery/tests/conf/: settings.py
xgallery/utils/: markup.py  middleware.py  url.py
xgallery/views/: __init__.py  default.py  wp.py
