[project]
name = "django-xgallery"
version = "0.0.1"
description = "A Gallery app for your Django site"
readme = "README.md"
authors = [
    { name = "Eric Williams", email = "eric@subcritical.org" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "django>=3.0",
    # Add other dependencies here, e.g., "requests>=2.28.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/django-xgallery"
Repository = "https://github.com/yourusername/django-xgallery.git"
Issues = "https://github.com/yourusername/django-xgallery/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
    "pytest-django",
]